--- a/debian/changelog.in
+++ b/debian/changelog.in
@@ -1,5 +1,11 @@
 graphviz (@VERSION@-1) intrepid; urgency=low
 
+  * Modified build scripts for Launchpad use
+
+ -- Dwight Perry <dperry@research.att.com>  Wed, 10 Oct 2012 13:07:00 -0400
+
+graphviz (2.18-1ubuntu5) intrepid; urgency=low
+
   * libcgraph API bump ->5
 
  -- John Ellson <ellson@research.att.com>  Tue, 19 Jan 2010 09:07:00 -0400
