--- a/doc/info/Makefile.am
+++ b/doc/info/Makefile.am
@@ -27,6 +27,14 @@ html_DATA = attrs.html colors.html command.html \
   oval.gif parallelogram.gif pentagon.gif plaintext.gif point.gif polygon.gif \
   record.gif record2.gif rect.gif rectangle.gif round.gif septagon.gif tab.gif \
   trapezium.gif triangle.gif tripleoctagon.gif sdlshapes.jpg sdlshapes.png \
-  square.gif html2.gv html3.gv html4.gv plugins.png
+  square.gif html2.gv html3.gv html4.gv plugins.png \
+  c_bold.png c_dashed.png c_dotted.png c_filled.png c_rounded.png c_solid.png c_striped.png \
+  e_bold.png e_dashed.png e_dotted.png e_solid.png \
+  g_lin0.png g_lin180.png g_lin270.png g_lin360.png g_lin45.png g_lin90.png g_rad0.png \
+  g_rad180.png g_rad270.png g_rad360.png g_rad45.png g_rad90.png \
+  n_bold.png n_dashed.png n_diagonals.png n_dotted.png n_filled.png \
+  n_rounded.png n_solid.png n_striped.png n_wedged.png \
+  none_back.png none_both.png none_forward.png none_none.png \
+  normal_back.png normal_both.png normal_forward.png normal_none.png
 
 EXTRA_DIST = $(html_DATA)
