--- a/cmd/lefty/lefty.vcproj
+++ b/cmd/lefty/lefty.vcproj
@@ -21,6 +21,7 @@
 			OutputDirectory="Debug"
 			IntermediateDirectory="Debug"
 			ConfigurationType="1"
+			EnableManagedIncrementalBuild="0"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -63,7 +64,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				OutputFile="c:/graphviz-ms/bin/$(ProjectName).exe"
-				LinkIncremental="2"
+				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
