--- a/plugin/ming/Makefile.am
+++ b/plugin/ming/Makefile.am
@@ -1,6 +1,12 @@
 # $Id$ $Revision$
 ## Process this file with automake to produce Makefile.in
 
+if WITH_CGRAPH
+GRAPH = cgraph
+else
+GRAPH = graph
+endif
+
 pkgfontdir = ${pkgdatadir}/font
 
 AM_CPPFLAGS = \
@@ -8,7 +14,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/common \
 	-I$(top_srcdir)/lib/pathplan \
 	-I$(top_srcdir)/lib/gvc \
-	-I$(top_srcdir)/lib/graph \
+	-I$(top_srcdir)/lib/$(GRAPH) \
 	-I$(top_srcdir)/lib/cdt \
 	$(MING_CFLAGS)
 
