apply guile config fix suggested by redhat packager

--- a/configure.ac
+++ b/configure.ac
@@ -710,7 +710,7 @@ else
           GUILE_LIBS=
 	  # don't die if PKG_CHECK_MODULES not available - el4, el5
           PKG_CHECK_MODULES([GUILE],
-		[guile >= "$GUILE_VERSION_MAJOR.$GUILE_VERSION_MINOR"],
+		[guile-2.0 >= "$GUILE_VERSION_MAJOR.$GUILE_VERSION_MINOR"],
 		GUILE_INCLUDES="$GUILE_CFLAGS",
           	[
 			PKG_CHECK_MODULES([GUILE],
