Update the libgraph document to use Cgraph

--- a/doc/libgraph/Makefile
+++ b/doc/libgraph/Makefile
@@ -7,7 +7,7 @@ all : Agraph.pdf
 %.pdf : %.dot
 	dot -Tps2 $< | epstopdf --filter --outfile=$@
 
-Agraph.pdf : Agraph.tex
+Agraph.pdf : Agraph.tex sccmap.tex agmemread.tex
 	$(PTEX) Agraph.tex
 	@if grep "Label(s) may have changed" Agraph.log; then $(PTEX) Agraph.tex; fi
 
@@ -15,7 +15,13 @@ Agraph.ps : Agraph.dvi
 	@if grep "Label(s) may have changed" Agraph.log; then $(TEX) Agraph.tex; fi
 	$(DVI) -o Agraph.ps Agraph
 	
-TEXS = graph.tex sccmap.tex
+TEXS = graph.tex sccmap.tex agmemread.tex
+
+sccmap.tex : sccmap.c
+	lgrind -i -c -t 4 -l C sccmap.c > sccmap.tex
+
+agmemread.tex : agmemread.c
+	lgrind -i -c -t 4 -l C agmemread.c > agmemread.tex
 
 Agraph.aux : Agraph.tex
 	$(TEX) Agraph
