ignore products: lib/common/stamp-h2 lib/common/types.h

--- a/.gitignore
+++ b/.gitignore
@@ -132,6 +132,8 @@ lib/common/htmlparse.c
 lib/common/htmlparse.h
 lib/common/ps_font_equiv.h
 lib/common/svgcolor_lib
+lib/common/stamp-h2
+lib/common/types.h
 lib/expr/exop.h
 lib/expr/exparse.c
 lib/expr/exparse.h
