Fix non-portable notations in gvpr.1; requires use of tbl, so configure and Makefile change also

--- a/configure.ac
+++ b/configure.ac
@@ -269,6 +269,7 @@ AC_CHECK_PROGS(SORT,gsort sort,false)
 
 AC_CHECK_PROG(EGREP,egrep,egrep,false)
 AC_CHECK_PROG(GROFF,groff,groff,false)
+AC_CHECK_PROG(TBL,tbl,tbl,false)
 AC_CHECK_PROG(PS2PDF,ps2pdf,ps2pdf,false)
 AC_CHECK_PROG(PS2PDF,pstopdf,pstopdf,false)
 
