--- a/lib/sfdpgen/Makefile.am
+++ b/lib/sfdpgen/Makefile.am
@@ -20,7 +20,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/cdt
 
 noinst_HEADERS = sfdpinternal.h spring_electrical.h \
-	LinkedList.h sparse_solve.h post_process.h \
+	sparse_solve.h post_process.h \
 	stress_model.h uniform_stress.h \
 	QuadTree.h Multilevel.h sfdp.h PriorityQueue.h 
 
@@ -29,7 +29,7 @@ noinst_LTLIBRARIES = libsfdpgen_C.la
 endif
 
 libsfdpgen_C_la_SOURCES = sfdpinit.c spring_electrical.c \
-	LinkedList.c sparse_solve.c post_process.c \
+	sparse_solve.c post_process.c \
 	stress_model.c uniform_stress.c \
 	QuadTree.c Multilevel.c PriorityQueue.c
 
