--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -3,7 +3,7 @@
 
 SUBDIRS = cdt graph cgraph pathplan sfio vmalloc ast \
 	vpsc rbtree ortho sparse patchwork expr common \
-	pack xdot label gvc ingraphs topfish glcomp \
+	pack xdot label gvc ingraphs topfish glcomp mingle \
 	circogen dotgen dotgen2 fdpgen neatogen twopigen sfdpgen osage gvpr
 
 EXTRA_DIST = Makefile.old gvc.vcproj gvc.def 
